--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.0-rc.1",
+    "sass": "^1.26.11",
     "typescript": "^4.0.3",
     "vite": "^1.0.0-rc.1"
   }
