--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "easyw-ui-vue-code",
+  "name": "demo",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build"
   },
   "dependencies": {
-    "vue": "^3.0.0-rc.1",
-    "vue-router": "4.0.0-beta.3"
+    "vue": "^3.0.4"
   },
   "devDependencies": {
-    "@vue/compiler-sfc": "^3.0.0-rc.1",
-    "sass": "^1.26.11",
-    "typescript": "^4.0.3",
-    "vite": "^1.0.0-rc.1"
+    "vite": "^1.0.0-rc.13",
+    "@vue/compiler-sfc": "^3.0.4"
   }
 }
