--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.4",
+    "marked": "^1.2.5",
     "sass": "^1.30.0",
     "vite": "^1.0.0-rc.13"
   }
