--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "github-markdown-css": "^4.0.0",
+    "prismjs": "^1.22.0",
     "vue": "^3.0.4",
     "vue-router": "4.0.0-rc.6"
   },
